# backupbox

./: .gitignore  Cargo.toml  README.md  main_view.glade
enclosure/: enclosure.scad
src/: main.rs
