[package]
name = "backupbox"
version = "0.1.0"
authors = ["Federico Igne <git@federicoigne.com>"]
edition = "2018"

[build]

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-none-linux-gnueabihf-gcc"

# (Optional) Set default target for cargo build
# target = "armv7-unknown-linux-gnueabihf"
# rustflags = ["-C", "linker=arm-none-linux-gnueabihf-gcc"]

[dependencies]
chrono = "0.4"
battery = "0.7.8"
gio = "0.9.0"
glib = "0.10.3"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

